2012-06-07  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/text/csv.scm (text): fixed multiple line comments reading.

2012-06-01  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm (and-let*): modified to rewrite initial expression
	to avoid unbound variable exception after macro expansion.

2012-05-30  Takashi Kato  <ktakashi@ymail.com>

	* src/port.c (file_look_ahead_u8): Fixed when EOF is read buffer index
	was decreased and it causes infinite loop with combination of get-u8.

2012-05-26  Takashi Kato  <ktakashi@ymail.com>

	* src/reader.c (read_hash_equal): fixed SEGV when reading #= with
	read or get-datum.

2012-05-18  Takashi Kato  <ktakashi@ymail.com>

	* src/unicode.c (utf8_reader): fixed utf8 treatment.

	* src/reader.c (read_symbol_or_number): modified lexical syntax check in
	R6RS mode not to raise io error when the first letter was geater than
	0x7F.
	(readtable): introduced CT_ILLEGAL to handle illegal control characters.

2012-05-14  Takashi Kato  <ktakashi@ymail.com>

	* ext/zlib/rfc/zlib.scm (open-inflating-input-port): fixed read!
	procedure.

	* src/port.c (Sg_MakeCustomBinaryPort): improved
	custom_binary_put_u8_array performance.

2012-05-12  Takashi Kato  <ktakashi@ymail.com>

	* src/port.c (get or read binary operations): fixed reckless label to
	be allow to get custom port.

2012-05-10  Takashi Kato  <ktakashi@ymail.com>

	* src/vmlib.stub (library-exported-set!): modified the behaviour to
	append the export spec. now export syntax can be appeared multiple
	times in one library.

2012-05-07  Takashi Kato  <ktakashi@ymail.com>

	* src/extlib.stub (get-output-bytevector): fixed to reset buffer.

	* src/port.c (Sg_SetPortPosition): fixed set port position.

	* src/null.stub (null): modified bytevector-copy to take start and end
	optional paraemeters.

2012-05-04  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/rfc/x.509.scm (rfc x.509): fixed unbound variable error
	calling make-basic-constrains.
